force-app/main/default/objects/Venue__c/fields/Max_Seated__c.field-meta.xml
<CustomField>
    <fullName>Max_Seated__c</fullName>
    <description>Used to warn coordinator if event headcount exceeds seated capacity</description>
    <label>Max Capacity Seated</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>