force-app/main/default/objects/Venue__c/fields/Max_Standing__c.field-meta.xml
<CustomField>
    <fullName>Max_Standing__c</fullName>
    <label>Max Capacity Standing</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>