force-app/main/default/objects/Venue__c/fields/Standard_Day_Rate__c.field-meta.xml
<CustomField>
    <fullName>Standard_Day_Rate__c</fullName>
    <label>Standard Day Rate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>